Ajout modal nom de jeu

--- a/game-list.html
+++ b/game-list.html
@@ -13,7 +13,7 @@
         <table id="gamesTable">
             <thead>
                 <tr class="fixed-header">
-                    <th>Date</th>
+                    <th>Partie</th>
                     <th>Meilleur Joueur</th>
                     <th>Actions</th>
                 </tr>
