Ajout bouton pour supprimer un tour (avec confirmation)

--- a/score.html
+++ b/score.html
@@ -128,6 +128,15 @@
         </div>
     </div>
 
+    <!-- Modal pour la suppression d'un tour de la partie -->
+    <div id="deleteRoundModal" class="modal">
+        <div class="modal-content">
+            <p>Êtes-vous sûr de vouloir supprimer ce tour ?</p>
+            <button class="ok-btn" onclick="deleteRound()">Oui</button>
+            <button class="cancel-btn" onclick="closeDeleteRoundModal()">Annuler</button>
+        </div>
+    </div>
+
     <!-- Modal pour les options -->
     <div id="optionsModal" class="modal">
         <div class="modal-content">
