Ajout bouton partager score + demandes confirmation suppression + sauvegarde totalPointsPerRound

--- a/game-list.html
+++ b/game-list.html
@@ -26,6 +26,15 @@
         </table>
     </div>
 
+    <!-- Modal pour la suppression d'une partie -->
+    <div id="deleteGameModal" class="modal">
+        <div class="modal-content">
+            <p>Êtes-vous sûr de vouloir supprimer cette partie ?</p>
+            <button class="ok-btn" onclick="deleteGame()">Oui</button>
+            <button class="cancel-btn" onclick="closeDeleteGameModal()">Annuler</button>
+        </div>
+    </div>
+
     <footer>
         <nav class="bottom-nav">
             <a href="index.html" class="nav-item">
