--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <div class="home">
-        <h1>G<span style="color: #3498db">@</span>me <span style="color: #327536">P</span><span style="color: #45a049">o</span><span style="color: gold">i</span><span style="color: #f39c12">n</span><span style="color: #e74c3c">t</span><span style="color: #c0392b">s</span></h1>
+        <h1 onclick="showVersion()">G<span style="color: #3498db">@</span>me <span style="color: #327536">P</span><span style="color: #45a049">o</span><span style="color: gold">i</span><span style="color: #f39c12">n</span><span style="color: #e74c3c">t</span><span style="color: #c0392b">s</span></h1>
+        <div id="version" class="hint">v0.202505240249</div>
         <button class="new-game-btn" onclick="newGame()">Nouvelle Partie</button>
         <button class="game-list-btn" onclick="location.href='game-list.html'">Liste des Parties</button>
     </div>
